faet: 新增登录接口         完成登录接口         添加小程序接口认证有关配置         修复数据库迁移的表名不匹配的bug         更新api文档,添加全局认证,优化结构
